# FlashDeck-T6

./: README.md  run.py
FlashDeck-T6/: .gitignore  COMECE_AQUI.md  LICENSE  README.md  pyproject.toml  requirements.txt
FlashDeck-T6/docs/: DELIVERY_CHECKLIST.md  LANGUAGE.md  ORAL_DEFENSE.md  TECHNICAL_REPORT.md  TESTING.md  VALIDATION_REPORT.md  VIDEO_SCRIPT.md
FlashDeck-T6/examples/invalid/: semantic_duplicate_front.fdeck  semantic_multiple_errors.fdeck  semantic_too_few_cards.fdeck  semantic_undeclared_tag.fdeck  syntax_missing_semicolon.fdeck
FlashDeck-T6/examples/valid/: compiladores.fdeck
FlashDeck-T6/flashdeck/: cli.py  compiler.py  diagnostics.py  grammar.lark  semantic.py  utils.py
FlashDeck-T6/flashdeck/generators/: html_generator.py
FlashDeck-T6/flashdeck/templates/: deck.html
FlashDeck-T6/scripts/: demo_unix.sh  setup_unix.sh  setup_windows.ps1
FlashDeck-T6/tests/: conftest.py  test_examples.py  test_generation.py
docs/: ARCHITECTURE.md
examples/: README.md
examples/invalid/: lexical_invalid_character.fdeck  semantic_invalid_difficulty.fdeck
examples/valid/: estruturas_de_dados.fdeck
flashdeck/: __init__.py  __main__.py  ast_nodes.py  model.py  parser.py
flashdeck/generators/: __init__.py  csv_generator.py  json_generator.py
scripts/: demo_windows.ps1
tests/: test_parser.py  test_semantic.py
